# bluesky-who-blocks-me-and-block-back

./: .env  .gitignore  AGENTS.md  LICENSE  README.md  SUGGESTIONS_FEATURES.md  USER_GUIDE.md  block-and-list.py  blocks-to-list.py  blocks.json  my-blockings-listed.json  my-blockings.json  who-blocks-me.py
BlueskyModeration/: .gitignore  .swiftformat  .swiftlint.yml  ARCHITECTURE.md  CONCEPT.md  DESIGN_GUIDE.md  FEATURES.md  HIG-AUDIT.md  MASTERPLAN.md  MASTERPLAN_UX.md  PLAN.md  PLAN2.md  PLAN3.md  PLAN3_TECH.md  README.md  RECOMMENDATIONS.md  RELEASE_CHECKLIST.md  SUGGESTIONS_UX.md  TIMELINE_PLAN.md  UX.md  landing.html  project.yml
BlueskyModeration/.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  HIGH-ISSUES-PLAN.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
BlueskyModeration/BlueskyModeration.xcodeproj/: project.pbxproj
BlueskyModeration/Sources/App/: AppDependencies.swift  Info.plist  (+6 more)
BlueskyModeration/WidgetExtension/: RulyxWidget.swift
BlueskyModeration/ci_scripts/: ci_pre_xcodebuild.sh
block-and-list-rs/: Cargo.toml
block-and-list-rs/BlueskyModeration/: AGENTS.md  Info.plist  Makefile  README.md  project.yml
block-and-list-rs/src/: main.rs
bluesky-media-downloader/: main.py  pyproject.toml
old/: blocks-to-list.py  blocks.json  my-blockings-listed.json  my-blockings.json  who-blocks-me.py
scripts/: localization-report.py
web/: index-de.html  index.html  package-lock.json  package.json
web/kimi/: index.html
who-blocks-me-rs/: Cargo.toml  README.md  blocks.json  cache.json
who-blocks-me-rs/src/: main.rs
(+227 files in other folders)
